--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body{
     height: 100vh;
     justify-content: center;
     align-items: center;
+    gap: 4em;
 }
 
 
@@ -35,3 +36,13 @@ body{
     
   
 }
+
+button{
+    border: none;
+    padding: 1em 2em;
+    border-radius: 1em;
+    cursor:pointer;
+    font-size: 1rem;
+    font-weight: 600;
+}
+
